# Proximity

./: .gitignore  .gitmodules  CMakeLists.txt
SDL-main/: WhatsNew.txt
SDL-main/VisualC-WinRT/: SDL-UWP.vcxproj  SDL-UWP.vcxproj.filters
SDL-main/docs/: README-ios.md  README-linux.md
helpers/: index.html
include/: map.h  point.h  quadTree.h  zorder.h  zordering.h
src/: main.cpp  map.cpp  point.cpp  quadTree.cpp  zorder.cpp  zordering.cpp
test/: vec.cpp
